--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button class="profile__edit-button" cursor: pointer type="button"></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button" type="submit"></button>
+          <button class="profile__add-button" cursor: pointer type="submit"></button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
@@ -45,7 +45,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__like-button" type="button"></button>
+                <button class="card__like-button" cursor: pointer type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -56,7 +56,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
-                <button class="card__like-button" type="button"></button>
+                <button class="card__like-button" cursor: pointer type="button"></button>
               </div>
             </li>
 
@@ -68,7 +68,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__like-button" type="button"></button>
+                <button class="card__like-button" cursor: pointer type="button"></button>
               </div>
             </li>
 
@@ -80,7 +80,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button class="card__like-button" type="button"></button>
+                <button class="card__like-button" cursor: pointer type="button"></button>
               </div>
             </li>
 
@@ -92,7 +92,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__like-button" type="button"></button>
+                <button class="card__like-button" cursor: pointer type="button"></button>
               </div>
             </li>
 
@@ -104,7 +104,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braies</h2>
-                <button class="card__like-button" type="button"></button>
+                <button class="card__like-button" cursor: pointer type="button"></button>
               </div>
             </li>
           </ul>
