--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/Logo.svg" alt="Logo Around the U.S" />
+        <img src="./images/Logo.svg" alt="Logo Around the U.S" class="header__image" />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -29,8 +29,8 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button" cursor: pointer type="button"></button>
+            <h1 class="profile__title">Jacques Cousteau </h1>
+            <button class="profile__edit-button" type="button"></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button" cursor: pointer type="button"></button>
