--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="profile__edit-button" type="button"></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button" cursor: pointer type="button"></button>
+          <button class="profile__add-button" type="button"></button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
