--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/Logo.svg" alt="Logo Around the U.S" class="header__image" />
+        <img
+          src="./images/Logo.svg"
+          alt="Logo Around the U.S"
+          class="header__image"
+        />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -29,7 +33,7 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__title">Jacques Cousteau </h1>
+            <h1 class="profile__title">Jacques Cousteau</h1>
             <button class="profile__edit-button" type="button"></button>
             <p class="profile__description">Explorer</p>
           </div>
@@ -45,7 +49,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__like-button" cursor: pointer type="button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -56,7 +60,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
-                <button class="card__like-button" cursor: pointer type="button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
 
@@ -68,7 +72,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__like-button" cursor: pointer type="button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
 
@@ -80,7 +84,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button class="card__like-button" cursor: pointer type="button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
 
@@ -92,7 +96,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__like-button" cursor: pointer type="button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
 
@@ -104,7 +108,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braies</h2>
-                <button class="card__like-button" cursor: pointer type="button"></button>
+                <button class="card__like-button" type="button"></button>
               </div>
             </li>
           </ul>
