--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
           <input
-            class="modal__text"
+            class="modal__input"
             type="text"
             name="title"
             id="profile-title-input"
@@ -65,7 +65,7 @@
             required
           />
           <input
-            class="modal__text"
+            class="modal__input"
             type="text"
             name="description"
             id="profile-description-input"
