--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
     </div>
     <!-- Add Card Modal -->
-    <div class="modal" id="profile-edit-modal">
+    <div class="modal" id="add-card-modal">
       <div class="modal__container">
         <button class="modal__close" id="modal-close-button"></button>
         <p class="modal__heading">New Place</p>
