New project updates

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Edit Modal -->
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close" id="modal-close-button"></button>
+        <button class="modal__close" id="modalEdit-close-button"></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
           <input
@@ -95,7 +95,7 @@
     <!-- Add Card Modal -->
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
-        <button class="modal__close" id="modal-close-button"></button>
+        <button class="modal__close" id="modalAdd-close-button"></button>
         <p class="modal__heading">New Place</p>
         <form class="modal__form" id="add-card-form">
           <input
@@ -131,7 +131,7 @@
     <!-- Card Picture Modal -->
     <div class="modal" id="card-picture-modal">
       <div class="modal__picture-container">
-        <button class="modal__close" id="modal-close-button"></button>
+        <button class="modal__close" id="modalPicture-close-button"></button>
         <img src="" alt="" class="modal__image" />
         <p class="modal__image-description"></p>
       </div>
