--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
       </li>
     </template>
 
-    <script defer src="./scripts/index.js"></script>
-    <script defer src="./scripts/validation.js"></script>
+    <script defer type="module" src="./pages/index.js"></script>
   </body>
 </html>
