--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="Pictures, Social, Media, Travel, Friends, Nature"
     />
-    <link href="./pages/index.css" rel="stylesheet" />
+
     <title>Around the U.S</title>
   </head>
 
@@ -20,7 +20,7 @@
     <div class="page__content">
       <header class="header page__section">
         <img
-          src="./images/Logo.svg"
+          src="<%=require('./images/logo.svg')%>"
           alt="Logo Around the U.S"
           class="header__image"
         />
@@ -28,7 +28,7 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/jacques-cousteau.png"
+            src="<%=require('./images/jacques-cousteau.png')%>"
             alt="Avatar Jacques-Cousteau"
             class="profile__image"
           />
@@ -147,7 +147,5 @@
         </div>
       </li>
     </template>
-
-    <script defer type="module" src="./pages/index.js"></script>
   </body>
 </html>
