--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,18 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img
-            src="<%=require('./images/jacques-cousteau.png')%>"
-            alt="Avatar Jacques-Cousteau"
-            class="profile__image"
-          />
+          <div class="profile__image-wrapper">
+            <img
+              src="<%=require('./images/jacques-cousteau.png')%>"
+              alt="Avatar Jacques-Cousteau"
+              class="profile__image"
+            />
+            <img
+              src="<%=require('./images/Editavatar.svg')%>"
+              alt="Edit Icon"
+              class="profile__edit-avatar"
+            />
+          </div>
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
             <button
@@ -128,12 +135,51 @@
         </form>
       </div>
     </div>
+    <!-- Edit Avatar Modal -->
+    <div class="modal" id="avatar-edit-modal">
+      <div class="modal__container">
+        <button class="modal__close" id="modalAvatar-close-button"></button>
+        <p class="modal__heading">Change Profile Picture</p>
+        <form class="modal__form" id="avatar-edit-form">
+          <input
+            class="modal__input"
+            type="url"
+            name="avatar-url"
+            id="avatar-url-input"
+            placeholder="Image URL"
+            required
+          />
+          <span class="modal__error" id="avatar-url-input-error"></span>
+          <button
+            type="submit"
+            class="modal__button modal__button_disabled"
+            disabled
+          >
+            Save
+          </button>
+        </form>
+      </div>
+    </div>
     <!-- Card Picture Modal -->
     <div class="modal" id="card-picture-modal">
       <div class="modal__picture-container">
         <button class="modal__close" id="modalPicture-close-button"></button>
         <img src="" alt="" class="modal__image" />
         <p class="modal__image-description"></p>
+      </div>
+    </div>
+    <!-- Delete Confirmation Modal -->
+    <div class="modal" id="delete-card-modal">
+      <div class="modal__container">
+        <button class="modal__close" id="modalDelete-close-button"></button>
+        <p class="modal__heading">Are you sure?</p>
+
+        <button
+          class="modal__button modal__button_delete-confirm"
+          id="confirm-delete-button"
+        >
+          Yes
+        </button>
       </div>
     </div>
 
